--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "emoji-picker-react": "^4.11.1",
     "firebase": "^10.12.3",
     "react": "^18.2.0",
